# python_project_structure

./: Isolated pyton scripts with uv.md  RESTRUCTURING_PROPOSAL.md  RESTRUCTURING_SUMMARY.md  VISUAL_COMPARISON.md  allowlist.txt  private_to_public_clean_mirror_workflow.md
.claude/skills/: README.md
.claude/skills/python-project-setup/: FILE_GUIDE.md  GUIDELINES.md  STRUCTURE_REFERENCE.md  skill.md
.claude/skills/python-project-setup/scripts/: README.md  setup_project.py  show_structure.py  validate_structure.py
.claude/skills/python-project-setup/template/: .gitignore  AGENTS.md  README.md  create_templates.sh  create_test_templates.sh  public.gitignore  pyproject.toml
.claude/skills/python-project-setup/template/_internal/: CONSTITUTION.md
.claude/skills/python-project-setup/template/_internal/docs/starter-pack/: MANIFEST.txt  STARTER_PACK_CONTENTS.md
.claude/skills/python-project-setup/template/_internal/project/context/essential/: checklists.md
.claude/skills/python-project-setup/template/docs/: README.md
.claude/skills/python-project-setup/template/scripts/: lint.py  setup.py  test.py
.claude/skills/python-project-setup/template/src/PROJECT_NAME/: __init__.py  __main__.py
.claude/skills/python-project-setup/template/src/PROJECT_NAME/core/: __init__.py
.claude/skills/python-project-setup/template/src/PROJECT_NAME/utils/: __init__.py
.claude/skills/python-project-setup/template/tests/: __init__.py  conftest.py
.claude/skills/python-project-setup/template/tests/unit/: test_example.py
Python Project Structure/: PYTHON_PROJECT_SETUP_CHECKLIST.md  PYTHON_PROJECT_STRUCTURE_SST.md  README.md  STARTER_PACK_CONTENTS.md
Python Project Structure/starter_pack/: CHANGELOG.md  HOW_TO_USE.md  allowlist.txt  create_src_templates.sh
Python Project Structure/starter_pack/.github/: copilot-instructions.md
Python Project Structure/starter_pack/.github/workflows/: ci.yml
Python Project Structure/starter_pack/_internal/: CONSTITUTION.md  README.md
Python Project Structure/starter_pack/_internal/docs/starter-pack/: STARTER_PACK_CONTENTS.md
Python Project Structure/starter_pack/_internal/project/: AGENT_START_HERE.md  README.md
Python Project Structure/starter_pack/_internal/project/context/essential/: warnings.md
Python Project Structure/starter_pack/_internal/reports/: README.md
Python Project Structure/starter_pack/scripts/: README.md
Python Project Structure/starter_pack/src/PROJECT_NAME/models/: __init__.py
(+1 files in other folders)
